--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
   <!-- Header -->
   <header class="header" id="header">
     <div class="nav-container">
-      <a href="#home" class="logo">SOS Malhas</a>
+      <!-- Troque o texto pelo logo -->
+      <a href="#home" class="logo" style="padding:0;">
+        <img src="assets/SosMalhasLogoVetor.png" alt="SOS Malhas" class="logo-img" style="height:48px;max-width:180px;width:auto;display:block;">
+      </a>
       <nav class="nav" id="nav">
         <ul class="nav-list">
           <li><a href="#home" class="nav-link">Início</a></li>
@@ -143,7 +146,8 @@
       <div class="hero-pattern"></div>
     </div>
     <div class="hero-content">
-      <h1>Fardamentos com qualidade e compromisso há mais de uma década</h1>
+      <h1 class="hero-title">Uniformes e camisetas personalizadas</h1>
+      <p class="hero-subtitle">Qualidade e compromisso há mais de uma década</p>
       <p>Uniformes empresariais, escolares e camisetas personalizadas em São Luís-MA.</p>
       <a href="#orcamento" class="cta-button">
         <i class="fas fa-calculator"></i>
@@ -242,43 +246,13 @@
         <div class="section-line"></div>
         <p class="section-subtitle">Confira alguns dos nossos projetos recentes de fardamentos e camisetas personalizadas.</p>
       </div>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <div class="gallery-placeholder">
-            <i class="fas fa-briefcase"></i>
-            <p>Uniformes Empresariais</p>
-          </div>
+      <!-- Carrossel de imagens -->
+      <div class="gallery-carousel">
+        <button class="gallery-btn prev-btn" aria-label="Anterior"><i class="fas fa-chevron-left"></i></button>
+        <div class="gallery-track">
+          <!-- Slides são gerados dinamicamente pelo JS -->
         </div>
-        <div class="gallery-item">
-          <div class="gallery-placeholder">
-            <i class="fas fa-graduation-cap"></i>
-            <p>Fardamentos Escolares</p>
-          </div>
-        </div>
-        <div class="gallery-item">
-          <div class="gallery-placeholder">
-            <i class="fas fa-tshirt"></i>
-            <p>Camisetas Personalizadas</p>
-          </div>
-        </div>
-        <div class="gallery-item">
-          <div class="gallery-placeholder">
-            <i class="fas fa-users"></i>
-            <p>Uniformes para Equipes</p>
-          </div>
-        </div>
-        <div class="gallery-item">
-          <div class="gallery-placeholder">
-            <i class="fas fa-star"></i>
-            <p>Produtos Premium</p>
-          </div>
-        </div>
-        <div class="gallery-item">
-          <div class="gallery-placeholder">
-            <i class="fas fa-palette"></i>
-            <p>Designs Personalizados</p>
-          </div>
-        </div>
+        <button class="gallery-btn next-btn" aria-label="Próximo"><i class="fas fa-chevron-right"></i></button>
       </div>
     </div>
   </section>
