--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <div class="footer-contact">
           <h4>Contato</h4>
           <p><i class="fas fa-phone"></i> (98) 98780-0178</p>
-          <p><i class="fas fa-envelope"></i> sosmalhas@gmail.com</p>
+          <p><i class="fas fa-envelope"></i> malhariapontoideal@hotmail.com</p>
         </div>
       </div>
       <div class="footer-bottom">
